# lidar_perception

./: CMakeLists.txt
include/: interpolation.hpp  json.hpp  perception_structure.hpp  read_json.hpp
script/: data_evaluation.py
src/: data_evaluation.cpp  interpolation.cpp  lidar_check.cpp  lidar_check2.cpp  main.cpp  online_main.cpp  read_json.cpp
